--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "npx expo start --dev-client",
-    "android": "npx expo run:android",
-    "ios": "npx expo run:ios --device",
+    "prebuild": "expo prebuild --clean",
+    "android": "expo run:android",
+    "ios": "expo run:ios --device",
     "web": "expo start --web",
     "lint": "expo lint"
   },
