--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rnmapbox/maps": "^10.1.41",
+    "@tanstack/query-async-storage-persister": "^5.85.6",
+    "@tanstack/react-query": "^5.85.6",
+    "@tanstack/react-query-persist-client": "^5.85.6",
     "expo": "53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -38,6 +41,7 @@
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
